grammar.js
    source_file: ($) => repeat($._top_level),

    _top_level: ($) =>
      choice(
        $.specification_block,
        $.model_block,
        $.views_block,
        $.deployment_block,
        $.global_block,
        $.likec4lib_block,
        $.import_statement,
      ),

    // ── Top-level blocks ──────────────────────────────────────────────

    model_block: ($) => seq("model", "{", repeat($._model_item), "}"),

    _model_item: ($) =>
      choice(
        $.element_declaration,
        $.relation,
        $.extend_element,
        $.extend_relation,
        $._semicolon,
      ),

    element_declaration: ($) =>
      prec.right(choice(
        // kind-first: component backend 'Title' { ... }
        seq(
          field("kind", $.identifier),
          field("name", $.identifier),
          repeat($.string),
          optional($.tags),
          optional($.element_body),
        ),
        // assignment: backend = component 'Title' { ... }
        seq(
          field("name", $.identifier),
          "=",
          field("kind", $.identifier),
          repeat($.string),
          optional($.tags),
          optional($.element_body),
        ),
      )),

    element_body: ($) => seq("{", repeat($._element_body_item), "}"),

    _element_body_item: ($) =>
      choice(
        $.element_declaration,
        $.relation,
        $._string_property,
        $.link_property,
        $.icon_property,
        $.style_block,
        $.metadata_block,
        $.tags,
        $._semicolon,
      ),

    string: (_) =>
      token(
        choice(
          seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
          seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
          seq(
            "'''",
            repeat(choice(/[^']+/, /'[^']/, /''[^']/)),
            "'''",
          ),
          seq(
            '"""',
            repeat(choice(/[^\"]+/, /\"[^\"]/, /\"\"[^\"]/)),
            '"""',
          ),
        ),
      ),

    identifier: (_) => /[_]*[a-zA-Z][-\w]*/,
