test/corpus/triple_quoted_strings.txt
==================
multiple triple-quoted descriptions remain separate strings
==================

model {
  first = component "First" {
    description """
      First Markdown description.
    """
    technology 'Node.js'
  }

  second = component "Second" {
    description """
      Second Markdown description.
    """
    technology 'TypeScript'
  }
}

---

(source_file
  (model_block
    (element_declaration
      name: (identifier)
      kind: (identifier)
      (string)
      (element_body
        (string)
        (string)))
    (element_declaration
      name: (identifier)
      kind: (identifier)
      (string)
      (element_body
        (string)
        (string)))))

==================
multiple single-quoted descriptions remain separate strings
==================

model {
  first = component 'First' {
    description '''
      First Markdown description.
    '''
    technology 'Node.js'
  }

  second = component 'Second' {
    description '''
      Second Markdown description.
    '''
    technology 'TypeScript'
  }
}

---

(source_file
  (model_block
    (element_declaration
      name: (identifier)
      kind: (identifier)
      (string)
      (element_body
        (string)
        (string)))
    (element_declaration
      name: (identifier)
      kind: (identifier)
      (string)
      (element_body
        (string)
        (string)))))
